--- a/src/issueBookPage.form
+++ b/src/issueBookPage.form
@@ -3,9 +3,11 @@
   <grid id="27dc6" binding="IssueBookPanel" layout-manager="GridLayoutManager" row-count="2" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="30" left="30" bottom="30" right="30"/>
     <constraints>
-      <xy x="225" y="123" width="1019" height="417"/>
+      <xy x="225" y="123" width="1020" height="452"/>
     </constraints>
-    <properties/>
+    <properties>
+      <background color="-13863757"/>
+    </properties>
     <border type="none"/>
     <children>
       <component id="ebb8c" class="javax.swing.JLabel">
@@ -26,7 +28,10 @@
         <constraints>
           <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
-        <properties/>
+        <properties>
+          <background color="-13863757"/>
+          <foreground color="-1"/>
+        </properties>
         <border type="none" title="Student Information"/>
         <children>
           <component id="20383" class="javax.swing.JLabel">
@@ -34,6 +39,7 @@
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <foreground color="-1"/>
               <text value="ID"/>
             </properties>
           </component>
@@ -43,13 +49,16 @@
                 <preferred-size width="150" height="-1"/>
               </grid>
             </constraints>
-            <properties/>
+            <properties>
+              <background color="-13863757"/>
+            </properties>
           </component>
           <component id="96ad4" class="javax.swing.JLabel">
             <constraints>
               <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <foreground color="-1"/>
               <text value="Full Name"/>
             </properties>
           </component>
@@ -59,13 +68,16 @@
                 <preferred-size width="150" height="-1"/>
               </grid>
             </constraints>
-            <properties/>
+            <properties>
+              <background color="-13863757"/>
+            </properties>
           </component>
           <component id="d7ae2" class="javax.swing.JLabel">
             <constraints>
               <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <foreground color="-1"/>
               <text value="Department"/>
             </properties>
           </component>
@@ -73,13 +85,16 @@
             <constraints>
               <grid row="3" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
-            <properties/>
+            <properties>
+              <background color="-13863757"/>
+            </properties>
           </component>
           <component id="98a2f" class="javax.swing.JLabel">
             <constraints>
               <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <foreground color="-1"/>
               <text value="Issue Date"/>
             </properties>
           </component>
@@ -89,13 +104,16 @@
                 <preferred-size width="150" height="-1"/>
               </grid>
             </constraints>
-            <properties/>
+            <properties>
+              <background color="-13863757"/>
+            </properties>
           </component>
           <component id="5097e" class="javax.swing.JLabel">
             <constraints>
               <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <foreground color="-1"/>
               <text value="Sex"/>
             </properties>
           </component>
@@ -128,6 +146,7 @@
               <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <foreground color="-1"/>
               <text value="Book Name"/>
             </properties>
           </component>
@@ -137,7 +156,9 @@
                 <preferred-size width="150" height="-1"/>
               </grid>
             </constraints>
-            <properties/>
+            <properties>
+              <background color="-13863757"/>
+            </properties>
           </component>
         </children>
       </grid>
@@ -146,7 +167,9 @@
         <constraints>
           <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
-        <properties/>
+        <properties>
+          <background color="-13863757"/>
+        </properties>
         <border type="none"/>
         <children>
           <component id="31b2b" class="javax.swing.JLabel">
@@ -164,6 +187,8 @@
               </grid>
             </constraints>
             <properties>
+              <background color="-13863757"/>
+              <foreground color="-13863757"/>
               <text value=""/>
             </properties>
           </component>
@@ -174,7 +199,9 @@
               </grid>
             </constraints>
             <properties>
-              <text value="Search"/>
+              <background color="-13863757"/>
+              <icon value="search(1).png"/>
+              <text value=""/>
             </properties>
           </component>
           <hspacer id="b6ad7">
@@ -210,12 +237,18 @@
             <constraints>
               <grid row="5" column="0" row-span="6" col-span="18" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
-            <properties/>
+            <properties>
+              <background color="-13863757"/>
+              <foreground color="-13863757"/>
+            </properties>
             <border type="none" title="Resalt"/>
             <children>
               <component id="fdef1" class="javax.swing.JTable" binding="SearchTable">
                 <constraints/>
-                <properties/>
+                <properties>
+                  <background color="-13863757"/>
+                  <selectionForeground color="-14658923"/>
+                </properties>
               </component>
             </children>
           </scrollpane>
