--- a/src/BookReturnPage.form
+++ b/src/BookReturnPage.form
@@ -1,57 +1,101 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="BookReturnPage">
-  <grid id="27dc6" binding="BookReturnpanel" layout-manager="GridLayoutManager" row-count="5" column-count="8" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-    <margin top="0" left="0" bottom="0" right="0"/>
+  <grid id="27dc6" binding="BookReturnpanel" layout-manager="GridLayoutManager" row-count="5" column-count="9" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+    <margin top="20" left="20" bottom="20" right="20"/>
     <constraints>
-      <xy x="20" y="20" width="500" height="400"/>
+      <xy x="20" y="20" width="589" height="400"/>
     </constraints>
-    <properties/>
+    <properties>
+      <background color="-13863757"/>
+      <foreground color="-1"/>
+    </properties>
     <border type="none"/>
     <children>
       <component id="7eafd" class="javax.swing.JLabel">
         <constraints>
-          <grid row="0" column="0" row-span="1" col-span="8" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="0" column="0" row-span="1" col-span="9" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <font size="24" style="1"/>
+          <foreground color="-1"/>
           <labelFor value="a5609"/>
-          <text value="Book Return Page"/>
+          <text value="Book Return"/>
         </properties>
       </component>
       <component id="45674" class="javax.swing.JTextField" binding="StudentText">
         <constraints>
           <grid row="1" column="0" row-span="2" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="-1"/>
+            <preferred-size width="150" height="35"/>
           </grid>
         </constraints>
-        <properties/>
+        <properties>
+          <background color="-13863757"/>
+          <font size="12" style="1"/>
+          <foreground color="-1"/>
+        </properties>
       </component>
       <scrollpane id="a5609" binding="StudentScrolp">
         <constraints>
-          <grid row="3" column="0" row-span="1" col-span="8" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+          <grid row="3" column="0" row-span="1" col-span="9" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
-        <properties/>
+        <properties>
+          <background color="-13863757"/>
+          <enabled value="false"/>
+          <foreground color="-1"/>
+        </properties>
         <border type="none"/>
         <children>
           <component id="e0d10" class="javax.swing.JTable" binding="StudentTable">
             <constraints/>
-            <properties/>
+            <properties>
+              <background color="-14658923"/>
+              <font size="12" style="1"/>
+              <foreground color="-1"/>
+              <gridColor color="-13863757"/>
+              <selectionBackground color="-4739409"/>
+              <selectionForeground color="-13863757"/>
+              <showHorizontalLines value="true"/>
+            </properties>
           </component>
         </children>
       </scrollpane>
-      <component id="3694b" class="javax.swing.JButton" binding="returnButton" default-binding="true">
-        <constraints>
-          <grid row="4" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <text value="Return"/>
-        </properties>
-      </component>
       <component id="157f9" class="javax.swing.JButton" binding="searchButton" default-binding="true">
         <constraints>
           <grid row="1" column="3" row-span="2" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <background color="-13863757"/>
+          <font size="12" style="1"/>
+          <foreground color="-1"/>
+          <icon value="search(1).png"/>
           <text value="Search"/>
+        </properties>
+      </component>
+      <hspacer id="fc907">
+        <constraints>
+          <grid row="1" column="4" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+      </hspacer>
+      <component id="3694b" class="javax.swing.JButton" binding="returnButton" default-binding="true">
+        <constraints>
+          <grid row="4" column="8" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <background color="-13863757"/>
+          <font size="12" style="1"/>
+          <foreground color="-1"/>
+          <text value="Return"/>
+        </properties>
+      </component>
+      <component id="14228" class="javax.swing.JButton" binding="homeButton" default-binding="true">
+        <constraints>
+          <grid row="4" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <background color="-13863757"/>
+          <font size="12" style="1"/>
+          <foreground color="-1"/>
+          <text value="Home"/>
         </properties>
       </component>
     </children>
