--- a/src/BookStatusPage.form
+++ b/src/BookStatusPage.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="BookStatusPage">
-  <grid id="27dc6" binding="BookStatuspanel" layout-manager="GridLayoutManager" row-count="2" column-count="11" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="BookStatuspanel" layout-manager="GridLayoutManager" row-count="3" column-count="12" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
       <xy x="20" y="49" width="1074" height="534"/>
@@ -12,7 +12,7 @@
     <children>
       <scrollpane id="fb79d">
         <constraints>
-          <grid row="1" column="0" row-span="1" col-span="11" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+          <grid row="2" column="0" row-span="1" col-span="12" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <background color="-16112057"/>
@@ -26,10 +26,10 @@
             <properties>
               <autoCreateRowSorter value="true"/>
               <autoResizeMode value="4"/>
-              <background color="-13863757"/>
+              <background color="-13726263"/>
               <dropMode value="USE_SELECTION"/>
               <fillsViewportHeight value="true"/>
-              <font name="Chilanka" size="18" style="0"/>
+              <font size="14" style="1"/>
               <foreground color="-1"/>
               <gridColor color="-15917742"/>
               <selectionForeground color="-4483328"/>
@@ -39,25 +39,21 @@
       </scrollpane>
       <hspacer id="9e2c8">
         <constraints>
-          <grid row="0" column="8" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="1" column="8" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
       </hspacer>
       <hspacer id="8b4">
         <constraints>
-          <grid row="0" column="4" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-        </constraints>
-      </hspacer>
-      <hspacer id="8370">
-        <constraints>
-          <grid row="0" column="10" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="1" column="4" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
       </hspacer>
       <component id="75468" class="javax.swing.JButton" binding="Issued">
         <constraints>
-          <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="1" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <background color="-13863757"/>
+          <font size="16" style="1"/>
           <foreground color="-1"/>
           <icon value="stack-of-books.png"/>
           <text value="Available Books"/>
@@ -65,22 +61,53 @@
       </component>
       <component id="f138e" class="javax.swing.JButton" binding="issuedBooksButton" default-binding="true">
         <constraints>
-          <grid row="0" column="7" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="1" column="7" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <background color="-13863757"/>
+          <font size="16" style="1"/>
+          <foreground color="-1"/>
           <icon value="reading(1).png"/>
           <text value="Issued Books"/>
         </properties>
       </component>
       <component id="e6280" class="javax.swing.JButton" binding="studentsButton" default-binding="true">
         <constraints>
-          <grid row="0" column="9" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="1" column="9" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <background color="-13863757"/>
+          <font size="16" style="1"/>
+          <foreground color="-1"/>
           <icon value="student.png"/>
           <text value="Students"/>
+        </properties>
+      </component>
+      <component id="1c6c" class="javax.swing.JButton" binding="homeButton" default-binding="true">
+        <constraints>
+          <grid row="1" column="11" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <background color="-13726263"/>
+          <font size="16" style="1"/>
+          <foreground color="-1"/>
+          <text value="Home"/>
+        </properties>
+      </component>
+      <hspacer id="905b0">
+        <constraints>
+          <grid row="1" column="10" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+      </hspacer>
+      <component id="58cff" class="javax.swing.JLabel">
+        <constraints>
+          <grid row="0" column="8" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <background color="-13726263"/>
+          <font size="28" style="1"/>
+          <foreground color="-1"/>
+          <text value="Library Status"/>
         </properties>
       </component>
     </children>
