GUI modification end

--- a/src/BookReturnPage.form
+++ b/src/BookReturnPage.form
@@ -3,7 +3,7 @@
   <grid id="27dc6" binding="BookReturnpanel" layout-manager="GridLayoutManager" row-count="5" column-count="9" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="20" left="20" bottom="20" right="20"/>
     <constraints>
-      <xy x="20" y="20" width="589" height="400"/>
+      <xy x="20" y="20" width="614" height="400"/>
     </constraints>
     <properties>
       <background color="-13863757"/>
@@ -95,6 +95,7 @@
           <background color="-13863757"/>
           <font size="12" style="1"/>
           <foreground color="-1"/>
+          <icon value="Back.png"/>
           <text value="Home"/>
         </properties>
       </component>
